--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,18 @@
                 <scope>test</scope>
             </dependency>
             <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.5.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testfx</groupId>
+                <artifactId>testfx-junit5</artifactId>
+                <version>4.0.18</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>app.logorrr</groupId>
                 <artifactId>core</artifactId>
                 <version>${project.version}</version>
@@ -235,6 +247,11 @@
                 <artifactId>native-osx</artifactId>
                 <classifier>dylibs</classifier>
                 <type>zip</type>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>app.logorrr</groupId>
+                <artifactId>app-tests</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
