#208: fixes test to open and close multiple files

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -52,12 +52,11 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
         </dependency>
-        <!-- needed if you want to use scenic view analyse the scenegraph
+        <!-- needed if you want to use scenic view analyse the scenegraph -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
         </dependency>
--->
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
