#208: adds monocle for headlest test runs

--- a/app-tests/pom.xml
+++ b/app-tests/pom.xml
@@ -39,6 +39,10 @@
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -55,6 +59,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <skipTests>false</skipTests>
+                    <!-- see https://github.com/TestFX/TestFX?tab=readme-ov-file for testfx parameters-->
+                    <!--  -Djava.awt.headless=true -Dtestfx.robot=glass -Dtestfx.headless=true -Dprism.order=sw -Dprism.verbose=true -->
                     <argLine>-Djava.library.path=${basedir}/target/native</argLine>
                 </configuration>
             </plugin>
