--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <scala.major.version>2.13</scala.major.version>
         <scala.version>${scala.major.version}.12</scala.version>
 
-        <openjfx.version>21.0.1</openjfx.version>
+        <openjfx.version>21.0.2</openjfx.version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <ikonli.version>12.3.1</ikonli.version>
         <!-- check https://github.com/gluonhq/graal/releases/ for latest gluon graal release -->
@@ -60,6 +60,7 @@
                 -->
                 <!-- see also dist/dist-win/pom.xml! -->
                 <openjfx.os.prefix>windows</openjfx.os.prefix>
+                <openjfx.os.arch>x64</openjfx.os.arch>
             </properties>
         </profile>
         <profile>
@@ -72,6 +73,7 @@
             </activation>
             <properties>
                 <openjfx.os.prefix>linux</openjfx.os.prefix>
+                <openjfx.os.arch>amd64</openjfx.os.arch>
             </properties>
         </profile>
         <profile>
