#238: updates screenshotter config

--- a/docs/src/main/resources/screenshotter-1280-800.conf
+++ b/docs/src/main/resources/screenshotter-1280-800.conf
@@ -29,11 +29,16 @@
                     "pattern" : "Exception"
                 }
             ],
-            "first-opened" : 1692306222365,
-            "font-size" : 4,
-            "selected-line-number" : 0
+            "first-opened" : 1730045369460,
+            "first-visible-text-cell-index" : 0,
+            "font-size" : 12,
+            "last-visible-text-cell-index" : 0,
+            "lower-timestamp" : 0,
+            "selected-line-number" : 0,
+            "upper-timestamp" : 1730045438927
         }
     },
+    "some-active" : "/Users/lad/gh/LogoRRR/docs/src/main/resources/example.log",
     "stage-settings" : {
         "height" : 800,
         "width" : 1280,
