--- a/docs/src/main/resources/screenshotter-2880-1800.conf
+++ b/docs/src/main/resources/screenshotter-2880-1800.conf
@@ -29,9 +29,13 @@
                     "pattern" : "Exception"
                 }
             ],
-            "first-opened" : 1692306222365,
-            "font-size" : 6,
-            "selected-line-number" : 0
+            "first-opened" : 1730045369460,
+            "first-visible-text-cell-index" : 0,
+            "font-size" : 12,
+            "last-visible-text-cell-index" : 0,
+            "lower-timestamp" : 0,
+            "selected-line-number" : 0,
+            "upper-timestamp" : 1730045438927
         }
     },
     "stage-settings" : {
