--- a/docs/src/main/resources/screenshotter-1440-900.conf
+++ b/docs/src/main/resources/screenshotter-1440-900.conf
@@ -34,9 +34,13 @@
                     "pattern" : "at "
                 }
             ],
-            "first-opened" : 1692306222365,
-            "font-size" : 10,
-            "selected-line-number" : 0
+            "first-opened" : 1730045369460,
+            "first-visible-text-cell-index" : 0,
+            "font-size" : 12,
+            "last-visible-text-cell-index" : 0,
+            "lower-timestamp" : 0,
+            "selected-line-number" : 0,
+            "upper-timestamp" : 1730045438927
         }
     },
     "stage-settings" : {
