--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
         <!--
             <jdk.home>/path/to/jdk</jdk.home> (mac, linux, windows)
             <graalvm.home>/path/to/graalvm</graalvm.home> (mac, linux, windows)
-            <osx.jdk.home.aarch64>/path/to/aarch64/jdk</osx.jdk.home.aarch64> (mac)
             -->
         <revision>25.1.0</revision>
         <scala.major.version>2.13</scala.major.version>
@@ -76,7 +75,6 @@
                 </os>
             </activation>
             <properties>
-                <jdk.home>${osx.jdk.home.aarch64}</jdk.home>
                 <jdk.javac>${jdk.home}/bin/javac</jdk.javac>
                 <jdk.javah>${jdk.home}/bin/javah</jdk.javah>
                 <openjfx.os.prefix>osx</openjfx.os.prefix>
@@ -113,10 +111,8 @@
                                                             </requireProperty>
                                                             -->
                                         <requireProperty>
-                                            <property>osx.jdk.home.aarch64</property>
-                                            <message>You have to set 'osx.jdk.home.aarch64' and it must point to a
-                                                aarch64 jdk.
-                                            </message>
+                                            <property>jdk.home</property>
+                                            <message>You have to set 'jdk.home' and it must point to a valid jdk installation (Tip: use SDKMan.io to install)</message>
                                         </requireProperty>
                                         <requireProperty>
                                             <property>osx.swiftc</property>
