#276: adds script to generate screenshots from command line

--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -52,6 +52,13 @@
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>app.logorrr.docs.ScreenShotterApp</mainClass>
+                </configuration>
+            </plugin>
             <!--
             <plugin>
                 <groupId>org.scalatest</groupId>
