--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>app.logorrr</groupId>
@@ -30,7 +31,9 @@
         <jdk.jlink.binary>${jdk.home}/bin/jlink</jdk.jlink.binary>
         <jdk.jpackage.binary>${jdk.home}/bin/jpackage</jdk.jpackage.binary>
         <jmh.version>1.37</jmh.version>
-        <windows.temurin.version>https://github.com/adoptium/temurin22-binaries/releases/download/jdk-22.0.1%2B8/OpenJDK22U-jre_x64_windows_hotspot_22.0.1_8.zip</windows.temurin.version>
+        <windows.temurin.version>
+            https://github.com/adoptium/temurin22-binaries/releases/download/jdk-22.0.1%2B8/OpenJDK22U-jre_x64_windows_hotspot_22.0.1_8.zip
+        </windows.temurin.version>
     </properties>
     <scm>
         <connection>scm:git:https://github.com/rladstaetter/LogoRRR.git</connection>
@@ -111,7 +114,9 @@
                                                             -->
                                         <requireProperty>
                                             <property>jdk.home</property>
-                                            <message>You have to set 'jdk.home' and it must point to a valid jdk installation (Tip: use SDKMan.io to install)</message>
+                                            <message>You have to set 'jdk.home' and it must point to a valid jdk
+                                                installation (Tip: use SDKMan.io to install)
+                                            </message>
                                         </requireProperty>
                                         <requireProperty>
                                             <property>osx.swiftc</property>
@@ -380,6 +385,11 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-resources-plugin</artifactId>
                     <version>3.3.0</version>
                     <executions>
@@ -542,7 +552,8 @@
                                     </requireMavenVersion>
                                     <requireJavaVersion>
                                         <version>24</version>
-                                        <message>JDK 24 or newer is recommended to build LogoRRR, use SDKman.io or download from a JDK provider like this one:
+                                        <message>JDK 24 or newer is recommended to build LogoRRR, use SDKman.io or
+                                            download from a JDK provider like this one:
                                             https://github.com/adoptium/temurin24-binaries/releases/download/jdk-24.0.1%2B9/OpenJDK24U-jdk_x64_windows_hotspot_24.0.1_9.zip
                                         </message>
                                     </requireJavaVersion>
