--- a/app/pom.xml
+++ b/app/pom.xml
@@ -118,8 +118,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -150,7 +150,7 @@
                         <executions>
                             <execution>
                                 <id>unpack-dependency</id>
-                                <phase>generate-test-resources</phase> <!-- Define the phase where you want to execute unpacking -->
+                                <phase>generate-test-resources</phase>
                                 <goals>
                                     <goal>unpack</goal>
                                 </goals>
