--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>scala-library</artifactId>
         </dependency>
         <dependency>
+            <groupId>net.ladstatt.core</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.pureconfig</groupId>
             <artifactId>pureconfig_${scala.major.version}</artifactId>
         </dependency>
@@ -30,7 +34,6 @@
     </dependencies>
     <build>
         <plugins>
-
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
