#285: extracts module 'jfxbfr' which contains painting logic

--- a/app-tests/pom.xml
+++ b/app-tests/pom.xml
@@ -23,6 +23,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>app.logorrr</groupId>
+            <artifactId>jfxbfr</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
         </dependency>
