--- a/app/pom.xml
+++ b/app/pom.xml
@@ -55,13 +55,25 @@
             <artifactId>javafx-controls</artifactId>
         </dependency>
         <!-- needed if you want to use scenic view analyse the scenegraph -->
+        <!--
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
         </dependency>
+        -->
+        <dependency>
+            <groupId>app.logorrr</groupId>
+            <artifactId>jfxbfr</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>app.logorrr</groupId>
+            <artifactId>jfxbfr</artifactId>
+            <classifier>tests</classifier>
+            <type>test-jar</type>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
@@ -113,10 +125,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
