--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>app</artifactId>
         </dependency>
         <dependency>
+            <groupId>app.logorrr</groupId>
+            <artifactId>jfxbfr</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
             <version>${jmh.version}</version>
