--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
     <modules>
         <module>build</module>
         <module>env</module>
+        <module>jfxbfr</module>
         <module>app</module>
         <module>dist</module>
         <module>docs</module>
@@ -232,6 +233,19 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>app.logorrr</groupId>
+                <artifactId>jfxbfr</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>app.logorrr</groupId>
+                <artifactId>jfxbfr</artifactId>
+                <version>${project.version}</version>
+                <classifier>tests</classifier>
+                <scope>test</scope>
+                <type>test-jar</type>
+            </dependency>
+            <dependency>
                 <groupId>app.logorrr.native</groupId>
                 <artifactId>native-osx</artifactId>
                 <classifier>dylibs</classifier>
@@ -297,8 +311,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
                     <configuration>
-                        <source>8</source>
-                        <target>8</target>
+                        <source>24</source>
+                        <target>24</target>
                     </configuration>
                 </plugin>
                 <plugin>
